--- a/examples/pod-template/r_driver-pod-template.yaml
+++ b/examples/pod-template/r_driver-pod-template.yaml
@@ -11,15 +11,7 @@ spec:
     - name: spark-local-dir-1
       hostPath:
         path: /local1
-        # type: Directory
-  # initContainers:  
-  # - name: volume-permission
-  #   image: public.ecr.aws/y4g4v0z7/busybox
-  #   # grant volume access to hadoop user  
-  #   command: ['sh', '-c', 'mkdir /data1; chown -R 999:1000 /data1'] 
-  #   volumeMounts:
-  #     - name: spark-local-dir-1
-  #       mountPath: /data1
+        type: Directory
   containers:
   - name: spark-kubernetes-driver # Don't change this name. EMR on EKS looking for this name
     volumeMounts:
