--- a/docker/benchmark-util/Dockerfile-MultiArch
+++ b/docker/benchmark-util/Dockerfile-MultiArch
@@ -13,7 +13,35 @@ RUN yum update -y && \
     make OS=LINUX
 
 
-FROM mozilla/sbt:8u292_1.5.7 as sbt
+# FROM mozilla/sbt:8u292_1.5.7 as sbt
+FROM openjdk:8-jdk-slim AS builder
+
+# Env variables
+ENV SCALA_VERSION 2.12.17
+ENV SBT_VERSION 1.5.7
+
+# Install Scala
+## Piping curl directly in tar
+RUN \
+    apt-get update && \
+    apt-get install -y curl && \
+    rm -rf /var/cache/apt/* && \
+    curl -fsL https://downloads.typesafe.com/scala/$SCALA_VERSION/scala-$SCALA_VERSION.tgz | tar xfz - -C /root/ && \
+    echo >> /root/.bashrc && \
+    echo "export PATH=~/scala-$SCALA_VERSION/bin:$PATH" >> /root/.bashrc
+
+# Install sbt
+RUN \
+    curl -L -o sbt-$SBT_VERSION.deb https://repo.scala-sbt.org/scalasbt/debian/sbt-$SBT_VERSION.deb && \
+    dpkg -i sbt-$SBT_VERSION.deb && \
+    rm sbt-$SBT_VERSION.deb && \
+    apt-get update && \
+    apt-get install sbt && \
+    sbt -Dsbt.rootdir=true sbtVersion
+
+
+FROM builder AS sbt
+
 # Build the Databricks SQL perf library
 RUN git clone https://github.com/aws-samples/emr-on-eks-benchmark.git /tmp/emr-on-eks-benchmark && \
     cd /tmp/emr-on-eks-benchmark/spark-sql-perf/ && \
