--- a/docker/benchmark-util/Dockerfile-MultiArch
+++ b/docker/benchmark-util/Dockerfile-MultiArch
@@ -61,6 +61,10 @@ USER root
 COPY --from=tpc-toolkit /tmp/tpcds-kit/tools /opt/tpcds-kit/tools
 COPY --from=sbt /tmp/emr-on-eks-benchmark/benchmark/target/scala-2.12/*jar ${SPARK_HOME}/examples/jars/
 
-# # Use hadoop user and group 
+# Set decommission
+WORKDIR /home/hadoop
+RUN chown hadoop:hadoop /usr/bin/decom.sh
+
+# Use hadoop user and group 
 USER hadoop:hadoop
 
