--- a/examples/pod-template/r_executor-pod-template-spot.yaml
+++ b/examples/pod-template/r_executor-pod-template-spot.yaml
@@ -11,9 +11,9 @@ spec:
     - name: spark-local-dir-1
       hostPath:
         path: /local1
-        type: Directory
+        # type: Directory
   containers:
-  - name: spark-kubernetes-driver # Don't change this name. EMR on EKS looking for this name
+  - name: spark-kubernetes-executor # Don't change this name. EMR on EKS looking for this name
     volumeMounts:
       - name: spark-local-dir-1
         mountPath: /data1
@@ -26,7 +26,7 @@ spec:
                 - key: 'eks.amazonaws.com/capacityType' 
                   operator: In 
                   values: 
-                  - ON_DEMAND
+                  - SPOT        
   # tolerations:
   #   - key: "spark-compute-optimized"
   #     operator: "Exists"
