--- a/utils/nginx-od.yaml
+++ b/utils/nginx-od.yaml
@@ -17,8 +17,8 @@ spec:
       labels:
         app: debug
     spec:
-      # nodeSelector:
-      #   type: "karpenter"    
+      nodeSelector:
+        type: "karpenter"
       containers:
       - image: nginx
         name: nginx
